added 3 new endpoints and completed question-service changes
Endpoints added :
5. Get QuestionIds Generated For Quiz
6. Get Questions from QuestionIds
7. Calculate Score from Answers

--- a/question-service/src/main/resources/application.properties
+++ b/question-service/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# You can add multiple instance of this service for Horizontal scalling > under Edit Configuration > VM Options
+# e.g. instance 1 : 7001, instance 2 : 7002 .. etc.
+server.port=7001
